@@ -201,6 +201,7 @@ typedef void (*voidfn)(void);
 
 WButtonBar *buttonbar_new (int visible);
 WButtonBar *find_buttonbar (Dlg_head *h);
+void buttonbar_clear_label (Dlg_head *, int idx);
 void buttonbar_set_label (Dlg_head *, int index, const char *text, voidfn);
 void buttonbar_set_label_data (Dlg_head *h, int idx, const char *text,
 			       buttonbarfn cback, void *data);
